--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,17 +1,28 @@
 .navbar{
-    color:brown;    
+    color:brown; 
+    font-size: 18px;   
+}
+
+.nav{
+  color: #000;
 }
 
 #shoppingproduct{
    color: rebeccapurple;
 }
 
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+  background-color: rgb(215, 203, 203);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
  body{
-    font-size: 1.7rem;
-    font-family: 'Merriweather Sans', sans-serif;
-    background: #2c3e50;
-    color: #ececec;
-    padding: 4rem;
+    background-color: #2c3e50;
+    padding: 2rem;
   }
 
   /* .price {
@@ -25,7 +36,7 @@
     padding: 12px;
     color: white;
     background-color: #000;
-    text-align: center;
+    /* text-align: center; */
     cursor:grab;
     width: 100%;
     font-size: 18px;
@@ -36,17 +47,18 @@
   }
 
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
     max-width: 300px;
     margin: 2rem;
     text-align: center;
-    font-family: arial;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto 1fr auto;
-    grid-gap: 10px;
+    /* font-family: arial; */
+    /* background-color: rgb(230, 228, 228); */
+    /* display: grid; */
+    /* grid-template-columns: 1fr; */
+    /* grid-template-rows: auto auto 1fr auto; */
+    /* grid-gap: 7px; */
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #140105;
     border-radius: 5px;
     width: 100%;
  }
@@ -60,6 +72,7 @@
   max-width: 200px;
   height: auto;
   margin-bottom: 10px;  
+  mix-blend-mode: multiply;
 }
 
 .card:hover .img{
@@ -86,3 +99,50 @@
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
   grid-gap: 20px; 
 }
+
+.quantity button {
+  width: 30px;
+  height: 30px;
+  font-size: 16px;
+}
+
+#cart{
+  border: 2px solid #000000;
+  width:50%;
+  padding: 10px;
+  text-align: justify;
+  background-color: snow;
+}
+
+#cart-items {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  } 
+
+  #checkout:hover{
+    opacity: 0.7;
+  }
+
+  .card .add-to-cart {
+    margin-top: 10px;
+    background-color: #3498db;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.card .quantity button {
+  background-color: #4caf50;
+  color: white;
+  padding: 5px 5px;
+  cursor: pointer;
+} 
+
+.card .quantity .quantity-value {
+  padding: 5px 10px;
+  font-size: 16px;
+} 
