--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,10 +3,6 @@
     font-size: 18px;   
 }
 
-.nav{
-  color: #000;
-}
-
 #shoppingproduct{
    color: rebeccapurple;
 }
@@ -20,16 +16,6 @@ header {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
- body{
-    background-color: #2c3e50;
-    padding: 2rem;
-  }
-
-  /* .price {
-    color: grey;
-    font-size: 22px;
-  } */
-  
   .card button {
     border: none;
     outline: 0;
@@ -47,24 +33,18 @@ header {
   }
 
 .card {
-    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
     max-width: 300px;
     margin: 2rem;
     text-align: center;
-    /* font-family: arial; */
-    /* background-color: rgb(230, 228, 228); */
-    /* display: grid; */
-    /* grid-template-columns: 1fr; */
-    /* grid-template-rows: auto auto 1fr auto; */
-    /* grid-gap: 7px; */
+    font-family: arial;
     padding: 20px;
     border: 1px solid #140105;
-    border-radius: 5px;
+    border-radius: 100px;
     width: 100%;
+    box-shadow: 2px 2px 2px 2px;
  }
 
 .img {
-	/* height: 200px; */
 	margin: 1rem;
 	transition: all 0.3s;
   object-fit: cover;
@@ -94,6 +74,29 @@ header {
   font-weight: bold;
 }
 
+.card .add-to-cart {
+  margin-top: 10px;
+  background-color: #3498db;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.card .quantity button {
+background-color: #4caf50;
+color: white;
+padding: 5px 5px;
+cursor: pointer;
+} 
+
+.card .quantity .quantity-value {
+padding: 5px 10px;
+font-size: 16px;
+} 
+
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
@@ -112,6 +115,7 @@ header {
   padding: 10px;
   text-align: justify;
   background-color: snow;
+  box-shadow: 2px 2px 2px ;
 }
 
 #cart-items {
@@ -124,25 +128,37 @@ header {
     opacity: 0.7;
   }
 
-  .card .add-to-cart {
-    margin-top: 10px;
-    background-color: #3498db;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-}
+  .cart-icon {
+    position: relative;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #333;
+  }
+  
+  .cart-icon i {
+    font-size: 1.5rem;
+    margin-right: 5px;
+  }
+  
+  .item-count {
+    position: absolute;
+    top: -5px;
+    right: -10px;
+    background-color: red;
+    color: #fff;
+    font-size: 12px;
+    padding: 2px 5px;
+    border-radius: 50%;
+  }
 
-.card .quantity button {
-  background-color: #4caf50;
-  color: white;
-  padding: 5px 5px;
-  cursor: pointer;
-} 
-
-.card .quantity .quantity-value {
-  padding: 5px 10px;
-  font-size: 16px;
-} 
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .cart-icon-wrapper {
+    margin-left: auto;
+  }
+  
